--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,7 +1,11 @@
+@import 'mixin.less';
 @import 'variables.less';
+@import 'fonts.less';
 
 body {
-  background: @coolor;
+  font-family: @font-family;
+  font-size: 15px;
+  color: @color;
 }
 
 .header {
@@ -9,3 +13,4 @@ body {
     background: #000;
   }
 }
+
