--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,1 +1,6 @@
-@coolor: green;
+@font-size: 15px;
+@font-size--small: 14px;
+
+@color: #9a9a9a;
+
+@font-family: "PTSansRegular", "Arial", sans-serif;
