--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,6 +1,19 @@
 @font-size: 15px;
 @font-size--small: 14px;
 
-@color: #9a9a9a;
 
 @font-family: "PTSansRegular", "Arial", sans-serif;
+@open-sans: "OpenSansRegular", "Arial", sans-serif;
+@open-sans--bold: "OpenSansBold", "Arial", sans-serif;
+
+
+@color: #9a9a9a;
+@color-active: #00bac6;
+@color-gray: #eee;
+@color-garay--c1: #c1c1c1;
+
+
+@min-width: 1010px;
+
+
+@transition: all 0.3s ease;
