--- a/app/less/main.less
+++ b/app/less/main.less
@@ -71,6 +71,11 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
   padding: 0 15px
 }
+/* 
+ -------------------------------------------------
+  Header
+ -------------------------------------------------
+*/
 .page-header {
   min-width: @min-width;
   &__top-bar {
@@ -204,6 +209,11 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+/* 
+ -------------------------------------------------
+  Main-content
+ -------------------------------------------------
+*/
 .page-main {
   min-width: @min-width;
   padding-top: 55px
@@ -347,7 +357,11 @@ h1, h2, h3, h4, h5, h6 {
     }
   }
 }
-
+/* 
+ -------------------------------------------------
+  Footer
+ -------------------------------------------------
+*/
 .page-footer {
   min-width: @min-width;
   &__info {
@@ -478,7 +492,7 @@ h1, h2, h3, h4, h5, h6 {
  --------------------
   SVG
  --------------------
-  */
+*/
 .svg-box {
   display: none;
 }
